tests/error/0028.exl
let
    f = { a }: a
in
    f { a = 1, b = 2 }
      ^ERROR
